Ported navigator classes from Logica Komet.
Compiling and running, but still work to do on navigator display.